src/main/java/com/example/demo/entity/error/BikeError.java
package com.example.demo.entity.error;

public enum BikeError {
	ID_REQUIRED, BRAND_REQUIRED, MODEL_REQUIRED, SIZE_REQUIRED, USE_REQUIRED,UNITS_REQUIRED,
	BIKE_NOT_EXISTS, BIKE_ALREADY_EXISTS, BIKE_CONSTRAINT_VIOLATION;
}
